fix: 移除#help的overflow:hidden，修复手机端触摸事件无法触发

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,6 @@ body {
     width: 100%;
     background-color: #fff;
     border-radius: 4px;
-    overflow: hidden;
 }
 
 #help summary {
